--- a/AppViralityTest/AppViralityTest.BLL/AppViralityTest.BLL.csproj
+++ b/AppViralityTest/AppViralityTest.BLL/AppViralityTest.BLL.csproj
@@ -57,6 +57,7 @@
     <Compile Include="CategoryManager.cs" />
     <Compile Include="ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AppViralityTest.DAL\AppViralityTest.DAL.csproj">
