--- a/AppViralityTest/AppViralityTest.DAL/App.Config
+++ b/AppViralityTest/AppViralityTest.DAL/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AppViralityTestDBEntities1" connectionString="metadata=res://*/Core.Models.AppViralityTestEntities.csdl|res://*/Core.Models.AppViralityTestEntities.ssdl|res://*/Core.Models.AppViralityTestEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-VIDOCVC\SQLNAVEEN;initial catalog=AppViralityTestDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AppViralityTestDBEntities1" connectionString="metadata=res://*/Core.Models.AppViralityTestEntities.csdl|res://*/Core.Models.AppViralityTestEntities.ssdl|res://*/Core.Models.AppViralityTestEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-VIDOCVC\SQLNAVEEN;initial catalog=AppViralityTestDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
