--- a/AppViralityTest/AppViralityTest.DAL/AppViralityTest.DAL.csproj
+++ b/AppViralityTest/AppViralityTest.DAL/AppViralityTest.DAL.csproj
@@ -73,12 +73,17 @@
     <Compile Include="Core\Models\Product.cs">
       <DependentUpon>AppViralityTestEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Core\Models\User.cs">
+      <DependentUpon>AppViralityTestEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Core\Repositories\ICategoryRepository.cs" />
     <Compile Include="Core\Repositories\IProductRepository.cs" />
     <Compile Include="Core\Repositories\IRepository.cs" />
+    <Compile Include="Core\Repositories\IUserRepository.cs" />
     <Compile Include="Persistance\Repositories\CategoryRepository.cs" />
     <Compile Include="Persistance\Repositories\ProductRepository.cs" />
     <Compile Include="Persistance\Repositories\Repository.cs" />
+    <Compile Include="Persistance\Repositories\UserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Persistance\UnitOfWork.cs" />
   </ItemGroup>
