--- a/AppViralityTest/AppViralityTest.DataModels/AppViralityTest.DataModels.csproj
+++ b/AppViralityTest/AppViralityTest.DataModels/AppViralityTest.DataModels.csproj
@@ -45,7 +45,7 @@
     <Compile Include="ProductDTO.cs" />
     <Compile Include="ProductViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="UserDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
